--- a/pi-hole/docker-compose.yml
+++ b/pi-hole/docker-compose.yml
@@ -20,7 +20,11 @@ services:
       DNS2: '1.1.1.1'
     # Volumes store your data between container upgrades
     volumes:
-      - './etc-pihole/:/etc/pihole/'
-      - './etc-dnsmasq.d/:/etc/dnsmasq.d/'
+      - 'pihole-data:/etc/pihole/'
+      - 'pihole-dnsmasq:/etc/dnsmasq.d/'
     cap_add:
       - 'NET_ADMIN'
+
+volumes:
+  pihole-data:
+  pihole-dnsmasq:
