Starting to split out services

--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -33,64 +33,7 @@ services:
       - 'traefik.http.routers.api.tls=true'
       - 'traefik.http.middlewares.simple-auth.basicAuth.users=admin:$$apr1$$dHFJHlhW$$N8MAT8xTG11j70VuENCY81'
 
-  whoami:
-    image: 'containous/whoami'
-    container_name: 'who_am_i'
-    restart: 'unless-stopped'
-    labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.whoami.rule=Host(`whoami.pi.lan`)'
-      - 'traefik.http.routers.whoami.entrypoints=web-secure'
-
-  grafana:
-    image: 'grafana/grafana'
-    container_name: 'grafana'
-    restart: 'unless-stopped'
-    volumes:
-      - './grafana-data/:/var/lib/grafana'
-    user: '0' # i had to use 0, not 104 or what 'id -u' returns
-    labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.grafana.rule=Host(`grafana.pi.lan`)'
-      - 'traefik.http.routers.grafana.entrypoints=web-secure'
-      - 'traefik.http.routers.grafana.service=grafanaService'
-      - 'traefik.http.services.grafanaService.loadBalancer.server.port=3000'
-  
-  filebrowser:
-    image: 'filebrowser/filebrowser'
-    container_name: 'file_browser'
-    restart: 'unless-stopped'
-    command:
-      - '--noauth'
-    volumes:
-      - '/mnt/filebrowser_drive:/srv'
-    labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.filebrowser.rule=Host(`filebrowser.pi.lan`)'
-      - 'traefik.http.routers.filebrowser.entrypoints=web-secure'
-      - 'traefik.http.routers.filebrowser.service=filebrowserService'
-      - 'traefik.http.services.filebrowserService.loadBalancer.server.port=80'
-      - 'traefik.http.routers.filebrowser.middlewares=simple-auth'
-  
-  calendardisplay:
-    image: 'ghcr.io/alex-oswald/homeinfra-calendardisplay:main'
-    container_name: 'calendar_display'
-    restart: 'unless-stopped'
-    volumes:
-      - './configuration/:/configuration/' # cert location
-    environment:
-      - 'AzureAd__Instance=https://login.microsoftonline.com/'
-      - 'AzureAd__TenantId=common'
-      - 'AzureAd__ClientId=${AZUREAD_CLIENTID}'
-      - 'AzureAd__ClientSecret=${AZUREAD_CLIENTSECRET}'
-      - 'ASPNETCORE_ENVIRONMENT=Production'
-      - 'ASPNETCORE_URLS=https://+:443'
-      - 'ASPNETCORE_Kestrel__Certificates__Default__Password=${CERT_PASSWORD}'
-      - 'ASPNETCORE_Kestrel__Certificates__Default__Path=${CERT_PATH}'
-    labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.calendardisplay.rule=Host(`calendar.pi.lan`)'
-      - 'traefik.http.routers.calendardisplay.entrypoints=web-secure'
-      - 'traefik.http.routers.calendardisplay.service=calendardisplayService'
-      - 'traefik.http.services.calendardisplayService.loadBalancer.server.port=443'
-      - 'traefik.http.services.calendardisplayService.loadbalancer.server.scheme=https'
+networks:
+  default:
+    external: true
+    name: homeinfra-net
