--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.9'
 
 services:
   portainer:
-    image: 'portainer/portainer-ce:2.0.0'
+    container_name: 'portainer'
+    image: 'portainer/portainer-ce'
     command: '-H unix:///var/run/docker.sock'
     restart: 'always'
     volumes:
