Add pihole dynamic config

--- a/traefik/configuration/traefik_dynamic.toml
+++ b/traefik/configuration/traefik_dynamic.toml
@@ -1,3 +1,8 @@
 [[tls.certificates]]
   certFile = "/configuration/server.crt"
   keyFile = "/configuration/server.key"
+
+[http.services]
+  [http.services.piholeService.loadBalancer]
+    [[http.services.piholeService.loadBalancer.servers]]
+      url = "http://10.10.10.102:80"
