--- a/pi-hole/docker-compose.yml
+++ b/pi-hole/docker-compose.yml
@@ -5,11 +5,12 @@ services:
     container_name: 'pihole'
     image: 'pihole/pihole:latest'
     restart: 'unless-stopped'
-    ports:
-      - '53:53/tcp'
-      - '53:53/udp'
-      - '67:67/udp'
-      - '80:80/tcp'
+    #ports:
+    #  - '53:53/tcp'
+    #  - '53:53/udp'
+    #  - '67:67/udp'
+    #  - '80:80/tcp'
+    network_mode: host
     environment:
       ServerIP: '${PIHOLE_IPADDRESS}'
       VIRTUAL_HOST: '${PIHOLE_HOST}'
