--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3.9'
 
 services:
   portainer:
-    container_name: 'portainer'
     image: 'portainer/portainer-ce'
+    container_name: 'portainer'
+    restart: 'unless-stopped'
     command: '-H unix:///var/run/docker.sock'
-    restart: 'always'
     volumes:
         - '/var/run/docker.sock:/var/run/docker.sock'
         - 'portainer-data:/data'
