--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   traefik:
     image: 'traefik:v2.4.9'
     container_name: 'traefik'
-    restart: 'always'
+    restart: 'unless-stopped'
     command:
       - '--log.level=DEBUG'
       - '--api.dashboard=true'
